make jobs table in workflow page searchable

--- a/panoptes/static/src/workflow.html
+++ b/panoptes/static/src/workflow.html
@@ -53,7 +53,7 @@
 <div class="card">
   <div class="card-header"> workflow Jobs</div>
   <div class="card-body">
-    <table id="jobsTable" class="fullTable table table-responsive-sm stripe table-outline mb-0">
+    <table id="jobsTable" class="informTable table text-center table-responsive-sm table-outline mb-0">
       <thead>
       <tr>
         <th class="text-center">Id</th>
