--- a/panoptes/static/src/index.html
+++ b/panoptes/static/src/index.html
@@ -188,6 +188,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script
 <script src="https://use.fontawesome.com/2beee5c79e.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.22/datatables.min.js"></script>
+<!-- DataTables js for jobsTable-->
+<script type="text/javascript" src="js/src/tables.js"></script>
 
 <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModal" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
