a few aesthetic changes

--- a/panoptes/static/src/index.html
+++ b/panoptes/static/src/index.html
@@ -26,9 +26,9 @@
   <a class="navbar-brand" href="/">
     <img class="navbar-brand-full" src="img/brand/panoptes.png" alt="CoreUI Logo">
   </a>
-  <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!--  <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">-->
+<!--    <span class="navbar-toggler-icon"></span>-->
+<!--  </button>-->
   <ul class="nav navbar-nav d-md-down-none">
     <li class="nav-item px-3">
       <a class="nav-link" href="#"></a>
@@ -58,9 +58,9 @@
             <span class="badge badge-primary">NEW</span>
           </a>
         </li> -->
-        <input id="search" class="form-control" type="text" placeholder="Search" aria-label="Search">
-        <li>&nbsp;</li>
-        <li>&nbsp;</li>
+<!--        <input id="search" class="form-control" type="text" placeholder="Search" aria-label="Search">-->
+<!--        <li>&nbsp;</li>-->
+<!--        <li>&nbsp;</li>-->
         <li class="nav-item">
           <a class="nav-link" href="/">
             <i class="nav-icon icon-share"></i>Home</a>
@@ -177,7 +177,7 @@
 
 <footer class="app-footer">
   <div class="ml-auto">
-    <span><a href="https://github.com/panoptes-organization/panoptes">Panoptes</a></span>
+    <span><a target="_blank" href="https://github.com/nataquinones/panoptes/tree/better-job-data">panoptes: nquinones@better-job-data</a></span>
   </div>
 </footer>
 
