--- a/panoptes/static/src/workflow.html
+++ b/panoptes/static/src/workflow.html
@@ -2,17 +2,18 @@
 
 {% block main_info %}
 
+<h1>Workflow {{workflow.id}} </h1>
 <!--Workflow card-->
 <div class="card">
-  <div class="card-header"><strong>workflow {{workflow.id}} {{" finished after "+ (workflow.completed_at-workflow.started_at)|formatdelta if workflow.completed_at else "" }}</strong></div>
+<!--  <div class="card-header"><strong>workflow {{workflow.id}} {{" finished after "+ (workflow.completed_at-workflow.started_at)|formatdelta if workflow.completed_at else "" }}</strong></div>-->
   <table class="informTable table text-center table-responsive-sm table-outline mb-0">
     <thead class="thead-light">
     <tr>
-      <th class="text-center">Id</th>
-      <th class="text-center">Name</th>
-      <th class="text-center">Date</th>
-      <th class="text-center">Steps</th>
-      <th class="text-center">Actions</th>
+      <th class="text-center">workflow id</th>
+      <th class="text-center">name</th>
+      <th class="text-center">date</th>
+      <th class="text-center">current jobs</th>
+      <th class="text-center"></th>
     </tr>
     </thead>
     <tbody>
@@ -41,7 +42,7 @@
 
 <!--Progress bar-->
 <div class="card">
-  <div class="card-header">progress</div>
+  <div class="card-header">Progress</div>
   <div class="card-body">
     <div class="progress">
       {% set progress_percent = "%.2f"|format((workflow.jobs_done|float)/(workflow.jobs_total|float)*100)|string %}
@@ -53,30 +54,32 @@
 </div>
 
 <div class="card">
-  <div class="card-header"> workflow Jobs</div>
+  <div class="card-header">Jobs</div>
   <div class="card-body">
     <table id="jobsTable" class="informTable table text-center table-responsive-sm table-outline mb-0">
         <thead>
           <tr>
-            <th class="text-center">Id</th>
-            <th class="text-center">Name</th>
+
+            <th class="text-center">job id</th>
+            <th class="text-center">rule</th>
             <th class="text-center">wildcards</th>
-            <th class="text-center">Status</th>
-            <th class="text-center">Duration</th>
+            <th class="text-center">status</th>
+              <th class="text-center"></th>
+            <th class="text-center">duration</th>
           </tr>
         </thead>
         <tbody>
             {% for job in get_jobs(workflow.id) %}
             <tr class="tableRow">
                 <td>
-                    <a href='/workflow/{{ job.workflow_id }}/job/{{ job.jobid }}'> {{ job.jobid }} </a>
+                    {{ job.jobid }}
                 </td>
                 <td class="nameColumn">
-                    <a href='/workflow/{{ job.workflow_id }}/job/{{ job.jobid }}'> {{ job.name }} </a>
+                    <span class="badge badge-rule"> {{ job.name }} </span>
                 </td>
                 <td>
                     {% for wc in job.wildcards.values() %}
-                    <span class="badge badge-light">{{ wc }}{% if not loop.last %} {% endif %}</span>
+                    <span class="badge badge-wc">{{ wc }}{% if not loop.last %} {% endif %}</span>
                     {% endfor %}
                 </td>
                 <td>
@@ -85,8 +88,14 @@
                     </span>
                 </td>
                 <td>
+                    <a href='/workflow/{{ job.workflow_id }}/job/{{ job.jobid }}'>
+                        <button class="btn-ghost">View</button>
+                    </a>
+                </td>
+                <td>
                     {{ (job.completed_at-job.started_at)|formatdelta if job.completed_at else '-' }}
                 </td>
+
             </tr>
             {% endfor %}
         </tbody>
